# atom_rk3568_yolov5

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh  build-linux_RK3568.sh  build-linux_RK35XX.sh
include/: postprocess.h
install/rknn_yolov5_demo_Linux/: picture_detect  rknn_yolov5_demo  run_test.sh  video_detect
lib/: libHalf-2_5.so.25  libIex-2_5.so.25  libIlmImf-2_5.so.25  libIlmThread-2_5.so.25  libImath-2_5.so.25  libopencv_highgui.so.410  libopencv_imgcodecs.so.410  libopencv_videoio.so.410
model/: 23.txt  coco_80_labels_list.txt  goods.txt
rknn_convery/exp46/: events.out.tfevents.1745434290.PH.24520.0  opt.yaml  results.csv
rknn_convery/exp48/: events.out.tfevents.1745480036.PH.24612.0  opt.yaml  results.csv
rknn_convery/exp49/: events.out.tfevents.1745536362.PH.12208.0  opt.yaml  results.csv
rknn_convery/exp52/: events.out.tfevents.1745562051.PH.18924.0  opt.yaml  results.csv
rknn_convery/exp53/: events.out.tfevents.1745564136.PH.3504.0  opt.yaml  results.csv
rknn_convery/exp57/: events.out.tfevents.1745673022.PH.27360.0  opt.yaml  results.csv
rknn_convery/exp58/: events.out.tfevents.1745687999.PH.30492.0  opt.yaml  results.csv
rknn_convery/exp61/: events.out.tfevents.1745751251.PH.6004.0  opt.yaml  results.csv
rknn_convery/exp64/: events.out.tfevents.1746085261.PH.33908.0  opt.yaml  results.csv
rknn_convery/model/: dataset.txt
rknn_convery/python/: convert.py  dataset.txt  file_list.txt  list.txt  onnx_test.py  pip.txt  requirement.txt  requirements.txt  test.py  testonnx.py  valid.txt  yolov5.py
scripts/: run_test.sh
src/: new.cc  orangepi_uart.cc  pic.cc  postprocess.cc  rk3568_market.cc  thread.cc  thread.cc:Zone.Identifier  video.cc
toolchains/: aarch64-linux-gnu.toolchain.cmake
toolchains/aarch64/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
toolchains/aarch64_so/include/opencv4/opencv2/: cvconfig.h
toolchains/aarch64_so/lib/: libopencv_calib3d.so.410  libopencv_features2d.so.410  libopencv_flann.so.4.10.0  libopencv_img_hash.so.4.10.0  libopencv_objdetect.so.410  libopencv_photo.so.4.10.0  libopencv_stitching.so.410  libopencv_video.so.410
toolchains/aarch64_so/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
toolchains/install/lib/: libopencv_flann.so.4.10.0  libopencv_highgui.so.4.10.0  libopencv_imgcodecs.so.4.10.0  libopencv_objdetect.so.4.10.0  libopencv_stitching.so.410  libopencv_video.so.410  libopencv_videoio.so.410
